syntax = "proto3";

package channel;

service Channel {
    rpc Info(GetRequest) returns (InfoResponse) {}
}

message GetRequest {
    int64 uid = 1;
}

message ChanInfo {
    int64 id = 1;
    repeated string covers = 2;
    string qrcode = 3;
    string depict = 4;
    string dst = 5;
    string chan_intro = 6;
    string live_intro = 7;
    string wxmp = 8;
    int64 display = 9;
    int64 extra = 10;
    string title = 11;
}

message InfoResponse {
    ChanInfo info = 1;
}
